<resources>
    <string name="app_name">Mr. Fisher</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login">LOGIN</string>

    <!--Navigation drawer Menu Values-->
    <string name="nav_activity">Activity</string>
    <string name="nav_payment">Payments</string>
    <string name="nav_fishhome">Fish Catch</string>
    <string name="nav_deals">Offers</string>
    <string name="nav_facts">Health Facts</string>
    <string name="nav_diet">Diets</string>

    <string name="nav_accounts">Account</string>
    <string name="nav_support">Support</string>
    <!--Navigation drawer FooterMenu Values-->
    <string name="nav_settings_drawer">SETTINGS</string>

    <string name="nav_legal">LEGAL</string>
    <string name="nav_feedback">FEEDBACK</string>
    <string name="nav_signout">SIGN OUT</string>
    <string name="nav_statments">Statements</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_tag_home">HomeTag</string>
    <string name="title_activity_view_detail">ViewDetail</string>
    <string name="tuna_fish">TUNA FISH</string>
    <string name="add">ADD</string>
    <string name="frag_tag_viewdetail">viewdetailTag</string>
    <string name="rs">\u20B9</string>
    <string name="tuna_fish_desc">Tuna and mackerel sharks are the only species of fish that can maintain a body temperature higher than that of the surrounding water.Tuna and mackerel sharks are the only species of fish that can maintain a body.</string>
    <string name="click_to_pay">Click to Pay</string>
    <string name="fish_details">Fish Details</string>
    <string name="amount">Amount</string>
    <string name="quantity">Quantity</string>
    <string name="slide_to_pay">SLIDE TO PAY</string>
    <string name="cart">Cart</string>
    <string name="frag_tag_cart">cartTag</string>
    <string name="your_delivery_details">YOUR DELIVERY DETAILS</string>
    <string name="cart_caps">CART</string>
    <string name="select_paymnent_method">SELECT PAYMENT METHOD</string>
    <string name="multiply">X</string>
    <string name="check_out">CHECK OUT</string>
</resources>
